# flet

./: .appveyor.yml  .fvmrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  F1  README.md  denememap.py  hello.py  pyproject.toml  sonar-project.properties
sdk/python/: .docstr.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Taskfile.yml  _typos.toml  appveyor.yml  build-pyodide.cmd  build-wheels.py  clean-pypi.sh  hello.py  patch_toml.py  pyproject.toml
sdk/python/examples/: .gitignore  LICENSE  README.md  autoscroll.py  chat-ref.py  chat.py  combobox.py  counter.py  dropdown-flutter.py  gallery.yaml  greeter.py  grid.py  hello-app.py  hello.py  min-page.py  minimal-page.py  nav.py  popen.py  publish-gallery.sh  pyproject.toml  split.py  todo.py
sdk/python/examples/apps/7guis/: cells.py  counter.py  crud.py  flight_booker.py  pyproject.toml  timer.py
sdk/python/examples/apps/authentication/: basic-auth-async.py  basic-auth.py  basic_auth.py  basic_auth_async.py  check-auth-results-and-toggle-ui.py  github-oauth-with-listing-repos-async.py  github-oauth-with-listing-repos.py  github_check_auth_results_and_toggle_ui.py  github_login_same_page.py  github_minimal.py  github_oauth_with_listing_repos_async.py  github_repos_browser.py  linkedin-login.py  linkedin_login.py
sdk/python/examples/apps/autocomplete-searcher/: main.py  names.py
sdk/python/examples/apps/autocomplete_searcher/: main.py  pyproject.toml
sdk/python/examples/apps/calculator/: main.py  pyproject.toml
sdk/python/examples/apps/controls-gallery/: Dockerfile  LICENSE  main.py  pyproject.toml
sdk/python/examples/apps/controls_gallery/: README.md  gallerydata.py  main.py  pyproject.toml
sdk/python/examples/apps/counter/: counter-accessible.py  counter-async.py  counter.py  test_counter_app.py
sdk/python/examples/apps/counter-flutter/: main.py
sdk/python/examples/apps/counter_flutter/: fly.toml
sdk/python/examples/apps/counter_test_ios/: Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt
sdk/python/examples/apps/custom-loading-image/: main.py
sdk/python/examples/apps/custom_controls/: custom_buttons.py  pyproject.toml
sdk/python/examples/apps/declarative/: component_dialog.py  counter.py  counter_minimal.py  drag_and_drop_containers.py  drag_and_drop_ordering.py  edit-form.py  edit_form.py  minesweeper.py  minimal_reactive.py  progress-with-yield.py  progress_bar.py  routing_two_pages.py  set_state_with_list.py  shape_drawer.py  sunflower.py  tic-tac-toe.py  tic_tac_toe.py  todo.py  uncontrolled_textfield.py  use_dialog_basic.py  use_dialog_chained.py  use_dialog_multiple.py
sdk/python/examples/apps/desktop-window-manager/: page_window.py
sdk/python/examples/apps/dialogs/: main.py  (+1 more)
sdk/python/examples/community/: README.md
sdk/python/examples/controls/: bursting_flet.py  form_controls_misc.py  image-slideshow.py  image_slideshow.py  rocket.py
sdk/python/examples/cookbook/: cpu_bound_callback.py  cpu_bound_png_stream.py  cpu_bound_queue.py  user-control-with-auto-update.py  user_control_with_auto_update.py
sdk/python/examples/poc/: README.md  pyproject.toml
sdk/python/flet/: __init__.py  alert_dialog.py  alignment.py  animated_switcher.py  animation.py  app_bar.py  async_connection.py  async_local_socket_connection.py  async_websocket_connection.py  audio.py  banner.py  barchart.py  border.py  border_radius.py  bottom_sheet.py  button.py  buttons.py  callable_control.py  callout.py  card.py  checkbox.py  choicegroup.py  circle_avatar.py  client_storage.py  clipboard.py  colors.py  column.py  combobox.py  connection.py  constants.py  constrained_control.py  container.py  control.py  control_event.py  datatable.py  datepicker.py  datetime_field.py  dialog.py  divider.py  drag_target.py  (+100 more)
sdk/python/flet/__pyinstaller/: __init__.py  config.py  hook-flet.py  macos_utils.py  utils.py  win_utils.py
sdk/python/flet/auth/: authorization.py  group.py  oauth_provider.py  oauth_token.py  user.py
sdk/python/flet/charts/: grid_lines.py  line_chart.py  line_chart_axis.py  line_chart_axis_label.py  line_chart_data.py  line_chart_data_point.py  types.py
sdk/python/flet/cli/: cli.py
sdk/python/playground/: appbar-test.py  avatar-test.py  banner-test.py  barchart.py  buttons.py  card-test.py  chat.py  column-alignment.py  column-spacing.py  container-test.py  counter-home.py  counter.py  dialog-test.py  divider-horiz.py  divider-vert.py  dividers.py  dropdown.py  form-test.py  hello.py  hello_world.py  hello_world_testing.py  icons-browser.py  images-column.py  images-gridview.py  images.py  listview-scroll.py  opacity.py  panel.py  persona.py  progress-bar.py  progress-indicators.py  prot.py  rail-test.py  replace-test.py  row-gap.py  row-wrap.py  searchbox.py  simple-snack.py  simple.py  simple2.py  (+12 more)
sdk/python/playground/assets/: index.html
sdk/python/scripts/: check_flet_internal_pins.py  update_example_headers.py
sdk/python/templates/: .gitignore
sdk/python/tests/: conftest.py  test_alert_dialog.py  test_animated_switcher.py  test_banner.py  test_barchart.py  test_button.py  test_callout.py  test_checkbox.py  test_choicegroup.py  test_column.py  test_container.py  test_datatable.py  test_dialog.py  test_dropdown.py  test_echo_text.py  test_elevated_button.py  test_file_picker.py  test_form.py  test_grid.py  test_icon.py  test_iframe.py  test_image.py  test_linechart.py  test_link.py  test_markdown.py  test_message.py  test_moving_children.py  test_nav.py  test_navigation_bar.py  test_navigation_rail.py  test_page.py  test_panel.py  test_piechart.py  test_progress.py  test_progress_bar.py  test_radio.py  test_responsive_row.py  test_row.py  test_searchbox.py  test_shader_mask.py  (+15 more)
tools/crocodocs/: .gitignore  README.md  pyproject.toml
tools/crocodocs/src/crocodocs/: __init__.py  assets.py  cli.py  config.py  docs.py  frontmatter.py  generate.py  griffe_extract_script.py  inventory.py  migrate.py  partials.py  progress.py  pypi_index.py  python_xrefs.py  sidebars.py  watch.py
(+4275 files in other folders)
