[tool.poetry]
name = "flet_test"
version = "0.1.0"
description = "PoC integration flet with Django."
authors = ["Adam Beret Manczuk <beret@hipisi.org.pl>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.5"
psycopg2 = "^2.9"
beret-utils = "^0.4.8"
django-extensions = "^3.2.1"
Werkzeug = "^2.2.2"
#flet-core = "^0.0.1031"
#flet-routed-app = "^0.2.0"
#flet-config = "^0.0.3"
flet-core = {path = "./sdk/python/packages/flet-core"}
flet = {path = "./sdk/python/packages/flet"}
#flet = "^0.3.2"
#flet-core = "^0.0.1031"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
