[project]
name = "flet-project"
version = "0.1.0"
description = ""
authors = [{name = "Appveyor Systems Inc.", email ="hello@flet.dev"}]
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
    "flet-web",
    "flet-ads",
]

[tool.uv.sources]
flet = { workspace = true }
flet-cli = { workspace = true }
flet-desktop = { workspace = true }
flet-web = { workspace = true }
flet-ads = { workspace = true }
mkdocs-external-images = { git = "https://github.com/flet-dev/mkdocs-external-images", tag = "v0.2.0" }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
test = [
    "pytest >=7.2.0",
    "pytest_asyncio >=1.1.0",
]
dev = [
    "tomlkit >=0.11.6",
    "cryptography >=39.0.0",
    "pillow >=10.3.0",
    "pre-commit >=2.21.0",
    "pypi-cleanup==0.1.4",
    "pandas >=2.2.3",
    "numpy >=2.2.0",
    "scikit-image >=0.25.2",
    "ruff >=0.13.1",
    { include-group = 'test' },
]
docs-coverage = [
    "docstr-coverage >=2.3.2",
]
docs = [
    "mkdocs >=1.6.1",
    "mkdocs-material >=9.6.20",
    "mkdocstrings-python >=1.18.2",
    "mkdocstrings-python-xref >=1.16.4",
    "mike >=2.1.3",
    "markdown >=3.9",
    "pymdown-extensions >=10.16.1",
    "mkdocs-exclude >=1.0.2",
    "mkdocs-glightbox >=0.5.1",
    "mkdocs-open-in-new-tab >=1.0.8",
    "mkdocs-section-index >=0.3.10",
    "griffe-modernized-annotations >=1.0.8",
    "griffe-warnings-deprecated >=1.1.0",
    "pygments >=2.16",
    "markdown-exec[ansi] >=1.11.0",
    "pydocstyle >=6.3.0",
    "linkcheckmd >=1.4.0",
    "mkdocs-external-images",
    "mkdocs-macros-plugin>=1.4.0",
    { include-group = 'docs-coverage' },
]
all = [
    { include-group = 'dev' },
    { include-group = 'docs' },
]


[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
show-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = 'google' }
isort = { known-first-party = ["flet", "flet_cli"] }
preview = true
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80


[tool.pytest.ini_options]
pythonpath = ["."]
