[project]
name = "flet-project"
version = "0.1.0"
description = ""
authors = [{name = "Appveyor Systems Inc.", email ="hello@flet.dev"}]
license = "Apache-2.0"
requires-python = ">=3.10,<3.15"
dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
    "flet-desktop-light",
    "flet-web",
    "flet-ads",
    "flet-audio",
    "flet-audio-recorder",
    "flet-camera",
    "flet-charts",
    "flet-code-editor",
    "flet-color-pickers",
    "flet-datatable2",
    "flet-flashlight",
    "flet-geolocator",
    "flet-lottie",
    "flet-map",
    "flet-permission-handler",
    "flet-rive",
    "flet-secure-storage",
    "flet-video",
    "flet-webview",
]

[tool.uv.sources]
flet = { workspace = true }
flet-cli = { workspace = true }
flet-desktop = { workspace = true }
flet-desktop-light = { workspace = true }
flet-web = { workspace = true }
flet-ads = { workspace = true }
flet-audio = { workspace = true }
flet-audio-recorder = { workspace = true }
flet-camera = { workspace = true }
flet-charts = { workspace = true }
flet-datatable2 = { workspace = true }
flet-flashlight = { workspace = true }
flet-geolocator = { workspace = true }
flet-lottie = { workspace = true }
flet-map = { workspace = true }
flet-permission-handler = { workspace = true }
flet-rive = { workspace = true }
flet-secure-storage = { workspace = true }
flet-video = { workspace = true }
flet-webview = { workspace = true }
flet-code-editor = { workspace = true }
mkdocs-external-images = { git = "https://github.com/flet-dev/mkdocs-external-images", tag = "v0.2.0" }
flet-color-pickers = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
test = [
    "pytest >=7.2.0",
    "pytest_asyncio >=1.1.0",
]
dev = [
    "tomlkit >=0.11.6",
    "cryptography >=39.0.0",
    "pillow >=10.3.0",
    "pre-commit >=2.21.0",
    "pypi-cleanup==0.1.4",
    "pandas >=2.2.3",
    "numpy >=2.2.0",
    "scikit-image >=0.25.2",
    "ruff >=0.13.1",
    "matplotlib>=3.10.7",
    "plotly>=6.4.0",
    "kaleido>=1.2.0",
    { include-group = 'test' },
]
docs-coverage = [
    "docstr-coverage >=2.3.2",
]
docs = [
    "mkdocs >=1.6.1,<2.0.0",
    "mkdocs-material >=9.6.20",
    "mkdocstrings-python >=1.18.2",
    "mkdocstrings-python-xref >=1.16.4",
    "mike >=2.1.3",
    "markdown >=3.9",
    "pymdown-extensions >=10.16.1",
    "mkdocs-exclude >=1.0.2",
    "mkdocs-glightbox >=0.5.1",
    "mkdocs-open-in-new-tab >=1.0.8",
    "mkdocs-section-index >=0.3.10",
    "griffe-warnings-deprecated >=1.1.0",
    "pygments >=2.16",
    "markdown-exec[ansi] >=1.11.0",
    "pydocstyle >=6.3.0",
    "linkcheckmd >=1.4.0",
    "mkdocs-external-images",
    "mkdocs-macros-plugin >=1.5.0",
    "packaging >=23.0",
    { include-group = 'docs-coverage' },
]
all = [
    { include-group = 'dev' },
    { include-group = 'docs' },
]


[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
show-fixes = true
exclude = [
    ".github"
]

[tool.ruff.lint]
pydocstyle = { convention = 'google' }
isort = { known-first-party = [
    "flet",
    "flet_cli",
    "flet_desktop",
    "flet_web",
    "flet_ads",
    "flet_audio",
    "flet_audio_recorder",
    "flet_camera",
    "flet_charts",
    "flet_color_pickers",
    "flet_datatable2",
    "flet_flashlight",
    "flet_geolocator",
    "flet_lottie",
    "flet_map",
    "flet_permission_handler",
    "flet_rive",
    "flet_secure_storage",
    "flet_video",
    "flet_webview"
] }
preview = true
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["packages*"]
