[project]
name = "flet-examples"
version = "0.1.0"
description = "Sample apps for Flet"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "flet",
  "flet-contrib",
]

[dependency-groups]
dev = [
    "flet[all]",
    "matplotlib",
    "mplfinance",
    "pandas",
    "plotly"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "apps",
  "apps.*",
  "controls",
  "controls.*",
  "cookbook",
  "cookbook.*",
  "services",
  "services.*",
  "tutorials",
  "tutorials.*",
]
