[project]
name = "controls-gallery"
version = "0.1.0"
description = "Control gallery app"
authors = [
    { name = "Flet Devs", email = "hello@flet.dev" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet",
    "flet-contrib==2024.12.3"
]

[tool.uv]
dev-dependencies = [
    "flet",
    "flet-cli",
    "flet-desktop",
]

[tool.uv.sources]
flet = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet", rev = "v1" }
flet-cli = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-cli", rev = "v1" }
flet-desktop = { git = "https://github.com/flet-dev/flet", subdirectory = "sdk/python/packages/flet-desktop", rev = "v1" }
