[tool.poetry]
name = "studio-gallery"
version = "0.1.0"
description = "Sample apps for Flet Studio Gallery"
authors = ["Appveyor Systems Inc. <hello@flet.dev>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.7.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
