[project]
name = "todo"
version = "1.0.0"
description = "Classic to-do app with add, edit, delete, and filter interactions inspired by TodoMVC."
requires-python = ">=3.10"
keywords = ["apps", "todo", "tasks", "tabs", "forms"]
authors = [{ name = "Flet team", email = "hello@flet.dev" }]
dependencies = ["flet"]

[dependency-groups]
dev = ["flet-cli", "flet-desktop", "flet-web"]

[tool.flet.gallery]
categories = ["Featured", "Getting Started"]
screenshots = ["packages/flet/integration_tests/examples/apps/golden/macos/todo/todo_basic.png"]

[tool.flet.metadata]
title = "Classic To-Do"
controls = ["SafeArea", "Column", "Row", "TextField", "Tabs", "TabBar", "Checkbox", "IconButton", "FloatingActionButton", "OutlinedButton", "Text"]
layout_pattern = "form"
complexity = "intermediate"
features = ["task editing", "task filtering", "list state updates"]

[tool.flet]
org = "dev.flet"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"
